# dio-vectorial-databases

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
practical_examples/: deduplicacao_e_plagio.ipynb  encontrando_felinos.ipynb  sistema_de_recomendacao.ipynb  tagueando_documentos.ipynb
