[project]
name = "dio-vectorial-databases"
version = "1.0.0"
description = "Repositório com exemplos simples de uso de bancos vetoriais para mentoria na Dio"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Victor Abreu", email = "victorabreuf13@gmail.com" },
]
maintainers = [
    { name = "Victor Abreu", email = "victorabreuf13@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/VictorF13/dio-vectorial-databases"

dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "numpy>=2.3.1",
    "pip>=25.1.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
]
